--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Mariage de Lauren et Matthieu"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Mariage de Lauren et Matthieu</title>
   </head>
   <body>
     <noscript>Le JavaScript n'est pas autorisé sur votre navigateur.</noscript>
-    <div id="root"></div>
+    <div>
+    </div>
   </body>
 </html>
